--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "ag-grid-react": "^32.0.2",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
