--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7"
   },
