Add date-fns and sass

--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@mui/material": "^5.16.5",
     "ag-grid-community": "^32.0.2",
     "ag-grid-react": "^32.0.2",
+    "date-fns": "^3.6.0",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
